--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ h2, p {
     margin: 0;
 }
 
+.header-li-dekstop {
+    display: none;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -37,8 +41,8 @@ h2, p {
     padding: 0 0px;
     background-color: #000000;
     color: #fff;
-    box-shadow: 0px 0px 5px #000;
-    
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-bottom: 2px solid #ffffff10;
 
     z-index: 1;
 }
@@ -51,7 +55,7 @@ h2, p {
 .header-logo img {
     width: 60px;
     padding: 4px;
-    margin: 10px;
+    margin: 10px 10px 10px 20px;
     background-color: #ffffff4f;
     border-radius: 15px;
     border: 2px solid #ffffff4f;
@@ -145,12 +149,6 @@ h2, p {
 
 
 
-.header-li-dekstop {
-    display: none;
-}
-
-
-
 
 
 
@@ -169,7 +167,7 @@ h2, p {
 
 .first-section__txt h1 {
     font-family: 'Great Vibes', cursive;
-    font-size: 50px;
+    font-size: 55px;
     margin: 20px 0 0;
     color: #ffffff;
     text-shadow: 2px 2px 0px #000;
@@ -189,26 +187,35 @@ h2, p {
     justify-content: space-around;
     z-index: 1;
 
-    position: relative;
-    top: 100px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin-bottom: 10vh;
 }
 
 .first-section__cercles-1,
-.first-section__cercles-2 {
+.first-section__cercles-2,
+.first-section__cercles-3 {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #ffffff;
     text-shadow: 2px 2px 1px #000000;
+    background-color: #000000;
     font-size: 18px;
 
-    background-color: #000000b6;
-    height: 150px;
-    width: 150px;
+    height: 40vw;
+    width: 40vw;
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 250px;
+    max-width: 250px;
 
     border-radius: 50%;
-    border: 2px solid #000;
+    border: 1px solid #000000c3;
     box-shadow: 0px 0px 5px #000;
 
     outline: none;
@@ -222,9 +229,13 @@ h2, p {
     background-image: url(Imagenes/segunda.jpeg);
 }
 
+.first-section__cercles-3 {
+    background-image: url(Imagenes/quinta.jpg);
+}
+
 .first-section__cercles a {
     text-decoration: none;
-}
+}       
 
 .first-section__cercles-1:focus,
 .first-section__cercles-2:focus {
@@ -245,10 +256,6 @@ h2, p {
     background-color: #000000cc;
 }
 
-.second-section__space {
-    padding: 10px;
-}
-
 .second-section__first-txt,
 .second-section__second-txt {
     display: flex;
@@ -256,20 +263,25 @@ h2, p {
     align-items: center;
     flex-direction: column;
 
-    height: 300px;
-    width: 90vw;
     color: #fff;
     background: linear-gradient(0deg, #343434 0%, #0e0e0e 100%);
 
     border: 2px solid #000;
     border-radius: 24px;
 
-    box-shadow: 0px 0px 7px #ffffff49;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 85vw;
+    max-width: 550px;
+}
+
+
+.second-section__first-txt {
+    margin-top: 30px;
 }
 
 .second-section__second-txt {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 
@@ -277,8 +289,17 @@ h2, p {
 .second-section__first-txt p,
 .second-section__second-txt h2,
 .second-section__second-txt p {
-    width: 85vw;
     text-align: center;
+}
+
+.second-section__first-txt h2,
+.second-section__second-txt h2 {
+    padding: 16px 5px 8px;
+}
+
+.second-section__first-txt p,
+.second-section__second-txt p {
+    padding: 8px 5px 16px;
 }
 
 
@@ -294,7 +315,7 @@ h2, p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #000000;
+    background-color: #343434;
 }
 
 .third-section header {
@@ -302,15 +323,16 @@ h2, p {
     justify-content: center;
     align-items: center;
     text-align: center;
-    
-    background-color: #e2e2e2;
+
+    color: #fff;
+    background-color: #000000;
     
     width: 100vw;
-    height: 50px;
+    height: 65px;
     margin-top: 20px;
 
-    box-shadow: 0px 0px 7px #fff;
-    border: 2px solid #fff;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border: 2px solid #ffffff31;
 }
 
 .third-section__img-container {
@@ -327,8 +349,8 @@ h2, p {
     margin: 10px 0 10px;
 
     border-radius: 16px;
-    border: 2px solid #000;
-    box-shadow: 0px 0px 5px #ffffff4f;
+    border: 1px solid #00000079;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .third-section__button {
@@ -357,7 +379,6 @@ h2, p {
 
 
 
-
 footer {
     background-color: #000;
 
@@ -368,6 +389,7 @@ footer {
     justify-content: space-around;
 
     border-top: 2px solid #8a8a8a;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .footer-redes p {
@@ -403,4 +425,177 @@ footer {
     color: #fff;
     font-size: 18px;
     margin: 0;
+}
+
+
+
+
+
+.dekstop {
+    display: none;
+}
+
+.dekstop-2 {
+    display: none;
+}
+
+.first-section-dekstop {
+    display: none;
+}
+
+
+
+@media (min-width: 800px) {
+
+    .dekstop {
+        display: flex;
+    }
+
+    .header-li,
+    .header-menu {
+        display: none;
+    }
+
+    .header-li-dekstop {
+        display: flex;
+    }
+    
+    .header-li-dekstop a {
+        margin: 30px;
+        font-size: 24px;
+    }
+
+    .header-li-dekstop a:nth-child(4) {
+        margin-right: 50px;
+    }
+
+
+
+
+    .first-section-dekstop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+
+
+
+    .third-section__img-container__div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+    }
+
+    .third-section__img-container__div img {
+        width: 45vw;
+        max-width: 550px;
+        margin: 10px;
+    }
+
+
+
+
+    .movile {
+        display: none;
+    }
+
+    .dekstop-2 {
+        display: none;
+    }
+}
+
+
+
+
+
+@media (min-width: 1400px) {
+
+    body, html {
+        background-image: url('Imagenes/fondo-dekstop.jpg');
+    }
+
+    .dekstop {
+        display: none;
+    }
+
+    .dekstop-2 {
+        display: flex;
+    }
+
+
+
+
+    .first-section__txt {
+        padding-top: 0;
+        padding-bottom: 200px;
+    }
+
+    .first-section__txt h1 {
+        font-size: 100px;
+    }
+
+    .first-section__txt p {
+        font-size: 45px;
+    }
+
+    .first-section__movile {
+        display: none;
+    }
+
+    .first-section__cercles {
+        align-items: center;
+        top: 50%;
+        bottom: 50%;
+    }
+
+
+    .cercles-dekstop-2 {
+        display: flex;
+        position: relative;
+        margin-top: 90px;
+    }
+
+
+    .cercles-dekstop-2__one {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .first-section__cercles-1,
+    .first-section__cercles-2,
+    .first-section__cercles-3 {
+        margin: 50px;
+    }
+
+    .first-section__cercles-1 {
+        margin-left: 0;
+    }
+    .first-section__cercles-2 {
+        margin-right: 0px;
+    }
+
+
+
+
+    .third-section__img-container__div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+    }
+
+    .third-section__img-container__div img {
+        width: 31vw;
+        max-width: 550px;
+    }
+
+    .third-section__button {
+        display: none;
+    }
+
 }
