--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@
 body, html {
     margin: 0;
     padding: 0;
-    background-image: url('Imagenes/fondo2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
     font-family: 'Poppins', sans-serif;
 
     scroll-behavior: smooth;
 
     overflow-x: hidden;
+}
+
+body {
+    background-image: url('Imagenes/fondo2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 h2, p {
