--- a/pbproyectos/proyectos.css
+++ b/pbproyectos/proyectos.css
@@ -5,7 +5,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto Slab', serif;
-    background-color: #000;
+    background-color: #343434;
 
     max-height: 100vh;
     max-width: 100vw;
@@ -62,11 +62,34 @@ body, html {
     
     font-size: 16px;
     letter-spacing: 0.7px;
-
 }
 
+
+
+
+
+
+
+
+
+
 .first-section {
-    background-color: #ffffff;
+    background-color: #343434;
+}
+
+.first-section__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    margin-top: 100px;
+    margin-bottom: 10px;
+    width: 100vw;
+    
+    color: #ffffff;
+    background-color: #000000;
+    border: 1px solid #292929;
+    box-shadow: 0px 0px 10px #efefef;
 }
 
 .first-section__img-container {
@@ -74,35 +97,14 @@ body, html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
-    margin-top: 75px;
 }
 
-.first-section__img-container img{
+.imagen {
     width: 90vw;
-    height: auto;
-    margin: 15px;
+    margin: 2px;
 
-    border-radius: 24px;
-    border: 3px solid #000;
-    box-shadow: 0px 0px 5px #fff;
-}
-
-.first-section__title {
-    background-color: #ffffff;
-    width: 420px;
-
-    margin-top: 25px;
-    margin-bottom: 20px;
     border-radius: 16px;
-    border: 3px solid #000000;
-    box-shadow: 0px 0px 5px #fff;
-}
-
-.first-section__title p {
-    text-align: center;
-    font-size: 22px;
-    color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
@@ -111,121 +113,78 @@ body, html {
 
 
 
-@media (max-width: 1000px){
-    body, html {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow-x: hidden;
-        background-color: #000000;
-    }
+footer {
+    background-color: #000;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 
+    border-top: 2px solid #8a8a8a;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
 
-
-    .first-section {
-        background-color: #000000;
-    }
+.footer-redes p {
+    display: flex;
+    justify-content: center;
     
-    .first-section__title {
-        background-color: #e2e2e2;
-        width: 100vw;
-        border-radius: 0px;
-        margin-bottom: 10px;
-        margin-top: 15px;
+    color: #fff;
+    margin: 20px 0;
+    font-size: 20px;
+    font: bold;
+}
 
-        border: 1px solid #000000;
-        box-shadow: 0px 0px 5px #fff;
+.footer-redes__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-redes__img img {
+    margin: 10px 10px 10px;
+    height: 35px;
+}
+
+.footer-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo p {
+    color: #fff;
+    font-size: 18px;
+    margin: 0;
+    margin: 20px 0;
+}
+
+.dekstop {
+    display: none;
+}
+
+
+@media (min-width: 800px) {
+    .movile {
+        display: none;
+    }
+
+    .dekstop{ 
+        display: flex;
+    }
+
+    .first-section__title {
+        height: 70px;
     }
 
     .first-section__title p {
-        text-align: center;
-        font-size: 18px;
-        color: #000000;
-    }
-
-    .first-section__img-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-        margin-top: 85px;
-    }
-
-    .first-section__img-container img{
-        margin: 5px;
-
-        border-radius: 24px;
-        border: 1px solid #adadad34;
-        box-shadow: 0px 0px 2px #fff;
-    }
-
-
-
-
-
-
-
-
-
-    footer {
-        background-color: #000;
-    
-        margin-top: 25px;
-        height: 30vh;
-    
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    
-        border-top: 2px solid #8a8a8a;
-    }
-    
-    .footer-redes p {
-        display: flex;
-        justify-content: center;
-        
-        color: #fff;
-        margin: 10px 0 0;
         font-size: 20px;
-        font: bold;
     }
-    
-    .footer-redes__img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .footer-redes__img img {
-        margin: 10px 10px 10px;
-        height: 35px;
-    }
-    
-    .footer-logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        margin-bottom: 10px;
-    }
-    
-    .footer-logo p {
-        color: #fff;
-        font-size: 18px;
-        margin: 0;
+
+    .imagen {
+        width: 45vw;
+        max-width: 500px;
     }
 }
-
-
-
-
-
-
-
-
 
 
 /* ANIMACIONES */
