--- a/style.css
+++ b/style.css
@@ -78,6 +78,14 @@ h2, p {
     gap: .50rem;
 }
 
+.header-container h1 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 45px;
+    margin: 12px 0 0 25px;
+    color: #ffffff;
+    text-shadow: 2px 2px 0px #000;
+}
+
 .header-menu > div {
     background-color: #ffffff;
     height: 4px;
@@ -135,9 +143,8 @@ h2, p {
     color: #fff;
     margin: 25px 0;
 
-    font-family: 'Roboto Slab', serif;
     letter-spacing: 0.3px;
-    font-size: 20px;
+    font-size: 16px;
     font: bold;
 }
 
@@ -148,6 +155,8 @@ h2, p {
 #proyectos {
     scroll-margin-top: 80px;
 }
+
+
 
 
 
@@ -267,12 +276,7 @@ h2, p {
     flex-direction: column;
 
     color: #fff;
-    background: linear-gradient(0deg, #343434 0%, #0e0e0e 100%);
 
-    border: 2px solid #000;
-    border-radius: 24px;
-
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     width: 85vw;
     max-width: 550px;
 }
@@ -298,6 +302,8 @@ h2, p {
 .second-section__first-txt h2,
 .second-section__second-txt h2 {
     padding: 16px 5px 8px;
+    color: #d3d3d3;
+    text-shadow: 2px 2px 0px #000000;
 }
 
 .second-section__first-txt p,
@@ -318,7 +324,7 @@ h2, p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #343434;
+    background-color: #000000cc;
 }
 
 .third-section header {
@@ -328,14 +334,17 @@ h2, p {
     text-align: center;
 
     color: #fff;
-    background-color: #000000;
+    text-shadow: 2px 2px 5px #0000007a;
+    background-color: #000000af;
     
-    width: 100vw;
     height: 65px;
-    margin-top: 20px;
+    width: 91vw;
+    max-width: 1110px;
+
 
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border: 2px solid #ffffff31;
+    border-top: 1px solid #ffffff31;
+    border-bottom: 1px solid #ffffff31;
 }
 
 .third-section__img-container {
@@ -349,9 +358,8 @@ h2, p {
 
 .third-section__img-container img {
     width: 90vw;
-    margin: 10px 0 10px;
+    margin: 5px 0 5px;
 
-    border-radius: 16px;
     border: 1px solid #00000079;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -362,17 +370,258 @@ h2, p {
 
 .third-section__button a {
     padding: 10px 15px;
-    background: linear-gradient(0deg, #8a8a8a 0%, #ffffff 100%);
-    border-radius: 8px;
-    border: 2px solid #000;
-    box-shadow: 0px 0px 5px #ffffff4f;
+    background-color: #64646476;
+    border: 1px solid #0000008b;
+    border-bottom: 1px solid #000;
+    border-top: 1px solid #000;
     text-decoration: none;
-    color: #000;
-    text-shadow: 1px 1px 0px #a5a5a5;
+    box-shadow: 0px 0px 5px #a0a0a04a;
+    color: #ffffff;
+    text-shadow: 2px 2px 1px #000000c1;
 }
 
 .third-section__button-a {
     font: bold;
+}
+
+
+.third-section-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 91vw;
+}
+
+
+
+
+
+.type--B{
+    --line_color : #000000 ;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 5px #fff;
+}
+.button{
+    position : relative ;
+    z-index : 0 ;
+    width : 240px ;
+    height : 56px ;
+    text-decoration : none ;
+    font-size : 16px ; 
+    font-weight : bold ;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+}
+.button__text{
+    display : flex ;
+    justify-content : center ;
+    align-items : center ;
+    width : 100% ;
+    height : 100% ;
+}
+.button::before,
+.button::after,
+.button__text::before,
+.button__text::after{
+    content : '' ;
+    position : absolute ;
+    height : 3px ;
+    border-radius : 2px ;
+    background : var(--line_color) ;
+    transition : all .5s ease ;
+}
+.button::before{
+    top : 0 ;
+    left : 54px ;
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button::after{
+    top : 0 ;
+    right : 54px ;
+    width : 8px ;
+}
+.button__text::before{
+    bottom : 0 ;
+    right : 54px ;
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button__text::after{
+    bottom : 0 ;
+    left : 54px ;
+    width : 8px ;
+}
+.button__line{
+    position : absolute ;
+    top : 0 ;
+    width : 56px ;
+    height : 100% ;
+    overflow : hidden ;
+}
+.button__line::before{
+    content : '' ;
+    position : absolute ;
+    top : 0 ;
+    width : 150% ;
+    height : 100% ;
+    box-sizing : border-box ;
+    border : solid 3px var(--line_color) ;
+}
+.button__line:nth-child(1),
+.button__line:nth-child(1)::before{
+    left : 0 ;
+}
+.button__line:nth-child(2),
+.button__line:nth-child(2)::before{
+    right : 0 ;
+}
+.button:hover{
+    letter-spacing : 6px ;
+}
+.button:hover::before,
+.button:hover .button__text::before{
+    width : 8px ;
+}
+.button:hover::after,
+.button:hover .button__text::after{
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button__drow1,
+.button__drow2{
+    position : absolute ;
+    z-index : -1 ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+}
+.button__drow1{
+    top : -16px ;
+    left : 40px ;
+    width : 32px ;
+    height : 0;
+    transform : rotate( 30deg ) ;
+}
+.button__drow2{
+    top : 44px ;
+    left : 77px ;
+    width : 32px ;
+    height : 0 ;
+    transform : rotate(-127deg ) ;
+}
+.button__drow1::before,
+.button__drow1::after,
+.button__drow2::before,
+.button__drow2::after{
+    content : '' ;
+    position : absolute ;
+}
+.button__drow1::before{
+    bottom : 0 ;
+    left : 0 ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -60deg ) ;
+}
+.button__drow1::after{
+    top : -10px ;
+    left : 45px ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( 69deg ) ;
+}
+.button__drow2::before{
+    bottom : 0 ;
+    left : 0 ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -146deg ) ;
+}
+.button__drow2::after{
+    bottom : 26px ;
+    left : -40px ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -262deg ) ;
+}
+.button__drow1,
+.button__drow1::before,
+.button__drow1::after,
+.button__drow2,
+.button__drow2::before,
+.button__drow2::after{
+    background : var( --back_color ) ;
+}
+.button:hover .button__drow1{
+    animation : drow1 ease-in .06s ;
+    animation-fill-mode : forwards ;
+}
+.button:hover .button__drow1::before{
+    animation : drow2 linear .08s .06s ;
+    animation-fill-mode : forwards ;
+}
+.button:hover .button__drow1::after{
+    animation : drow3 linear .03s .14s ;
+    animation-fill-mode : forwards ;
+}
+.button:hover .button__drow2{
+    animation : drow4 linear .06s .2s ;
+    animation-fill-mode : forwards ;
+}
+.button:hover .button__drow2::before{
+    animation : drow3 linear .03s .26s ;
+    animation-fill-mode : forwards ;
+}
+.button:hover .button__drow2::after{
+    animation : drow5 linear .06s .32s ;
+    animation-fill-mode : forwards ;
+}
+@keyframes drow1{
+    0%   { height : 0 ; }
+    100% { height : 100px ; }
+}
+@keyframes drow2{
+    0%   { width : 0 ; opacity : 0 ;}
+    10%  { opacity : 0 ;}
+    11%  { opacity : 1 ;}
+    100% { width : 120px ; }
+}
+@keyframes drow3{
+    0%   { width : 0 ; }
+    100% { width : 80px ; }
+}
+@keyframes drow4{
+    0%   { height : 0 ; }
+    100% { height : 120px ; }
+}
+@keyframes drow5{
+    0%   { width : 0 ; }
+    100% { width : 124px ; }
+}
+
+
+
+
+
+
+/* 本体には関係ないスタイル */
+.container{
+    width : 100% ;
+    height : 100px ;
+    display : flex ;
+    flex-direction : column ;
+    justify-content : center ;
+    align-items : center ;
+}
+.button:not(:last-child){
+margin-bottom : 64px ;
 }
 
 
@@ -459,15 +708,21 @@ footer {
     .header-li-dekstop {
         display: flex;
     }
-    
-    .header-li-dekstop a {
-        margin: 30px;
-        font-size: 24px;
+
+    .header-li-dekstop div {
+        border-right: 1px solid #d8d8d8;
     }
 
-    .header-li-dekstop a:nth-child(4) {
-        margin-right: 50px;
+    .header-li-dekstop div:nth-child(5) {
+        border-right: none;
+        margin-right: 30px;
     }
+    
+    .header-li-dekstop a {
+        margin: 20px;
+        font-size: 16px;
+    }
+
 
 
 
@@ -493,7 +748,7 @@ footer {
     .third-section__img-container__div img {
         width: 45vw;
         max-width: 550px;
-        margin: 10px;
+        margin: 5px;
     }
 
 
@@ -526,6 +781,9 @@ footer {
         display: flex;
     }
 
+    .container {
+        display: none;
+    }
 
 
 
@@ -581,6 +839,10 @@ footer {
 
 
 
+    .third-section header {
+        max-width: 1675px;
+        width: 94.6vw;
+    }
 
     .third-section__img-container__div {
         display: flex;
