--- a/styles__proyectos.css
+++ b/styles__proyectos.css
@@ -12,11 +12,10 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    position:absolute;
     
     height: 200px;
     width: 100vw;
-    background-color: #232323f3;
+    background-color: #232323;
 }
 
 
@@ -146,32 +145,13 @@ hr {
 
 
 
-.first-section {
-    background-image: url(images/fondo.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 900px;
-    width: 100vw;
-}
-
-
-
-
-
-
-
-
-
-
 .second-section {
-    margin-top: -200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     
-    background-color: #232628ef;
+    background-color: #2b2b2b;
 }
 
 .second-section h2 {
@@ -224,7 +204,7 @@ footer {
     align-items: center;
     justify-content: center;
     width: 100vw;
-    background-color: #1d1c1b;
+    background-color: #232323;
 }
 
 footer nav {
@@ -251,7 +231,6 @@ footer img {
 .proyectos {
     margin-top: 20px !important;
 }
-
 
 .spacing {
     letter-spacing: 4px;
